--- a/src/java_多线程/src/多线程1/多线程笔记1.md
+++ b/src/java_多线程/src/多线程1/多线程笔记1.md
@@ -19,3 +19,9 @@
 6. yidle():释放当前cpu的执行权
 7. join():在线程a中调用线程b的join(),此时线程a就进入阻塞状态，知道线程b完全执行完以后，线程a才结束阻塞状态
 8. stop():已过时，当执行此方法时，强制结束当前线程
+9. sleep(long millitime)延迟效果
+
+## 8.3线程的调度
+![img_6.png](img_6.png)
+### 线程的优先级
+![img_7.png](img_7.png)
